Update background image

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 }
 
     html { 
-        background: url(https://qph.fs.quoracdn.net/main-qimg-d6060c18ed672a66335afc3c1dcd57c8) no-repeat center center fixed; 
+        background: url(https://brocku.ca/brock-news/wp-content/uploads/2022/10/GettyImages-1336937059-1600x728.jpg?x70330) no-repeat center center fixed; 
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
